# generated-vs-actual-reviews

./: LICENSE  README.md  pyproject.toml
data/: full_review_complexity.csv  review_complexity.csv
research/: complexity_EDA.ipynb  extract_characteristics.ipynb
src/: README.md  extract_characteristics.py
src/complexity_model_apapted/Metrics/: feature_extractor.py  features.txt
src/complexity_model_apapted/Metrics/Dictionaries/: Abbr.txt  Abstract.txt  Archaic_words.txt  Conj_mw.txt  Deont.txt  LVC.txt  Prep_mw.txt  Sokr.txt  Term.txt  Textdeixis.txt  zipf_dict.csv
