[tool.poetry]
name = "Generated VS Actual Reviews"
version = "0.1.0"
description = "Research project to compare generated reviews with actual reviews."
authors = ["Anastasia Margolina"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^1.2.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
pymorphy2 = "^0.9.1"
natasha = "^1.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
